Created simple prototype table for values output

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Metall Widget GSPP</string>
+    <string name="goldannotation">Золото</string>
+    <string name="silvannotation">Серебро</string>
+    <string name="platannotation">Платина</string>
+    <string name="pallannotation">Палладий</string>
+    <string name="header">Учетные цены на аффинированные драгоценные металлы по данным ЦБ</string>
+    <string name="value"> руб./грамм</string>
 </resources>
