Created selector for table using Jsoup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="silvannotation">Серебро</string>
     <string name="platannotation">Платина</string>
     <string name="pallannotation">Палладий</string>
-    <string name="header">Учетные цены на аффинированные драгоценные металлы по данным ЦБ</string>
+    <string name="header">Учетные цены на аффинированные драгоценные металлы по данным ЦБ на</string>
     <string name="value">руб./грамм</string>
 </resources>
