Added ability to manually update in main app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="header">Учетные цены на аффинированные драгоценные металлы по данным ЦБ на</string>
     <string name="value">руб./грамм</string>
     <string name="next">Изменить металл</string>
+    <string name="update">Обновить</string>
 </resources>
